; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/pseries/extr_dtl.c_dtl_stop.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/pseries/extr_dtl.c_dtl_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.dtl = type { i64 }

@lppaca = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dtl*)* @dtl_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dtl_stop(%struct.dtl* %0) #0 {
  %2 = alloca %struct.dtl*, align 8
  %3 = alloca i32, align 4
  store %struct.dtl* %0, %struct.dtl** %2, align 8
  %4 = load %struct.dtl*, %struct.dtl** %2, align 8
  %5 = getelementptr inbounds %struct.dtl, %struct.dtl* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = call i32 @get_hard_smp_processor_id(i64 %6)
  store i32 %7, i32* %3, align 4
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** @lppaca, align 8
  %9 = load %struct.dtl*, %struct.dtl** %2, align 8
  %10 = getelementptr inbounds %struct.dtl, %struct.dtl* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i64 %11
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  store i32 0, i32* %13, align 4
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @unregister_dtl(i32 %14)
  ret void
}

declare dso_local i32 @get_hard_smp_processor_id(i64) #1

declare dso_local i32 @unregister_dtl(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
